--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -118,17 +118,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                Welcome to our project website, an innovative platform created as part of the COMP6214 course
-                at the University of Southampton. This website serves as evidence of our team's dedication to
-                using data-driven insights to address social issues. In order to produce an extensive and interactive
-                map of the UK that illustrates the distribution of schools and crime rates across different counties,
-                we used robust research techniques. We've compiled, cleaned, and processed a sizable dataset using
-                trustworthy sources, such as the UK government's education department and the Office for National Statistics,
-                to provide a clear and succinct overview of educational resources and crime rates. In order to maximise
-                educational resources and improve community safety, we believe that this website will be a useful resource
-                for individuals in government, research, the academic community, and the general public. We hope you find
-                our work insightful and significant since we firmly believe in the ability of data to promote continual
-                development for the benefit of society.
+                <p>Welcome to our project website, an innovative platform created as part of the COMP6214 course
+                    at the University of Southampton.
+                </p>
+                <p>
+                    This website serves as evidence of our team's dedication to using data-driven insights to address social issues. In order to produce an extensive and interactive map of the UK that illustrates the distribution of schools and crime rates across different counties, we used robust research techniques. 
+                </p>
+               <p>
+                We've compiled, cleaned, and processed a sizable dataset using trustworthy sources, such as the UK government's education department and the Office for National Statistics, to provide a clear and succinct overview of educational resources and crime rates. 
+               </p>
+               <p>
+                In order to maximise educational resources and improve community safety, we believe that this website will be a useful resource for individuals in government, research, the academic community, and the general public. We hope you find our work insightful and significant since we firmly believe in the ability of data to promote continual development for the benefit of society.
+               </p>
             </div>
         </div>
     </div>
